--- a/client/.env.example
+++ b/client/.env.example
@@ -2,7 +2,10 @@
 // please do not commit .env to git (might contain sensitive info later) 
 // .env included in .gitignore
 
+SONGSSERVER=https://v3gpanxg9k.execute-api.us-west-2.amazonaws.com/default
+
+EXPRESSSERVER =http://localhost:3000
+
 CLIENT=http://localhost:3001
 MOBILE=http://localhost:19006
-SERVER=http://localhost:3000
 ANDROID=http://localhost:19000
