--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
 		"@react-navigation/native": "^5.9.1",
 		"@react-navigation/stack": "^5.14.2",
 		"axios": "^0.21.1",
+		"dotenv": "^8.2.0",
 		"enzyme-adapter-react-16": "^1.15.6",
 		"expo": "~40.0.0",
 		"expo-status-bar": "~1.0.3",
