--- a/client/package.json
+++ b/client/package.json
@@ -35,8 +35,8 @@
 		"enzyme-adapter-react-16": "^1.15.6",
 		"expo": "~40.0.0",
 		"expo-status-bar": "~1.0.3",
-		"react": "16.13.1",
-		"react-dom": "16.13.1",
+		"react": "^16.14.0",
+		"react-dom": "^16.14.0",
 		"react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
 		"react-native-gesture-handler": "~1.8.0",
 		"react-native-pixel-perfect": "^1.0.2",
