--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "react": "^16.13.1",
+    "react-native-pixel-perfect": "^1.0.2"
   }
 }
