--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,6 @@
     "setup": "npx tsc && node ./build/setup/createTable.js"
   },
   "dependencies": {
-    "@types/aws-sdk": "^2.7.0",
     "aws-sdk": "^2.830.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -19,8 +18,7 @@
     "jade": "~1.11.0",
     "log4js": "^6.3.0",
     "memorystore": "^1.6.4",
-    "morgan": "~1.9.1",
-    "pg": "^8.5.1"
+    "morgan": "~1.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
@@ -33,7 +31,6 @@
     "@types/http-errors": "^1.8.0",
     "@types/jest": "^26.0.19",
     "@types/morgan": "^1.9.2",
-    "@types/pg": "^7.14.9",
     "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
     "typescript": "^4.1.3"
