--- a/client/package.json
+++ b/client/package.json
@@ -65,6 +65,7 @@
 		"enzyme": "^3.11.0",
 		"jest": "^26.6.3",
 		"jsdom-global": "^3.0.2",
+		"react-native-debugger": "^1.1.0",
 		"ts-jest": "^26.5.0",
 		"ts-node": "^9.1.1",
 		"typescript": "~4.0.0"
