--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "react": "^16.13.1",
-    "react-native-pixel-perfect": "^1.0.2"
+    "react-native-pixel-perfect": "^1.0.2",
+    "react-native-sound": "^0.11.0"
   }
 }
