--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "dotenv": "^8.2.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "expo": "~40.0.0",
+    "expo-av": "~8.7.0",
     "expo-status-bar": "~1.0.3",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
@@ -48,8 +49,7 @@
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "expo-av": "~8.7.0"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
